// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facts scenario matches snapshot 1`] = `
Object {
  "card": Object {
    "log_id": "fact_card",
    "states": Array [
      Object {
        "div": Object {
          "height": Object {
            "type": "match_parent",
            "weight": 1,
          },
          "items": Array [
            Object {
              "background": Array [
                Object {
                  "color": "#121316",
                  "type": "solid",
                },
              ],
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [
                Object {
                  "delimiter_style": Object {
                    "color": "#0fff",
                  },
                  "height": Object {
                    "type": "match_parent",
                    "weight": 1,
                  },
                  "type": "separator",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
                Object {
                  "items": Array [
                    Object {
                      "font_size": 64,
                      "font_weight": "medium",
                      "height": Object {
                        "type": "wrap_content",
                      },
                      "line_height": 76,
                      "margins": Object {
                        "top": 24,
                      },
                      "text": "69 лет",
                      "text_color": "#fff",
                      "type": "text",
                      "width": Object {
                        "type": "wrap_content",
                      },
                    },
                    Object {
                      "content_alignment_vertical": "bottom",
                      "items": Array [
                        Object {
                          "font_size": 32,
                          "font_weight": "medium",
                          "height": Object {
                            "type": "wrap_content",
                          },
                          "line_height": 40,
                          "margins": Object {
                            "right": 16,
                          },
                          "text": "Возраст",
                          "text_color": "#fff",
                          "type": "text",
                          "width": Object {
                            "type": "wrap_content",
                          },
                        },
                        Object {
                          "font_size": 32,
                          "font_weight": "medium",
                          "height": Object {
                            "type": "wrap_content",
                          },
                          "line_height": 40,
                          "text": "wikipedia.org",
                          "text_color": "#80ffffff",
                          "type": "text",
                          "width": Object {
                            "type": "wrap_content",
                          },
                        },
                      ],
                      "margins": Object {
                        "top": 16,
                      },
                      "orientation": "horizontal",
                      "type": "container",
                    },
                  ],
                  "margins": Object {
                    "bottom": 20,
                  },
                  "paddings": Object {
                    "left": 48,
                    "right": 48,
                  },
                  "type": "container",
                },
                Object {
                  "delimiter_style": Object {
                    "color": "#0fff",
                  },
                  "height": Object {
                    "type": "match_parent",
                    "weight": 1,
                  },
                  "type": "separator",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
                Object {
                  "item_spacing": 24,
                  "items": Array [],
                  "paddings": Object {
                    "left": 48,
                    "right": 48,
                  },
                  "type": "gallery",
                },
              ],
              "paddings": Object {
                "bottom": 48,
                "top": 142,
              },
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
            Object {
              "alignment_horizontal": "right",
              "alignment_vertical": "top",
              "items": Array [
                Object {
                  "actions": Array [
                    Object {
                      "log_id": "close_fullscreen",
                      "url": "centaur://local_command?local_commands=[%7B%22command%22%3A%22close_layer%22%2C%22layer%22%3A%22DIALOG%22%2C%22stop_conversation%22%3Atrue%7D]",
                    },
                  ],
                  "alignment_horizontal": "right",
                  "background": Array [
                    Object {
                      "color": "#1affffff",
                      "type": "solid",
                    },
                  ],
                  "border": Object {
                    "corner_radius": 20,
                  },
                  "height": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                  "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/close_wt_border.png",
                  "margins": Object {
                    "right": 36,
                    "top": 36,
                  },
                  "paddings": Object {
                    "bottom": 22,
                    "left": 22,
                    "right": 22,
                    "top": 22,
                  },
                  "preload_required": 1,
                  "scale": "fill",
                  "type": "image",
                  "width": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                },
              ],
              "type": "container",
            },
          ],
          "orientation": "overlap",
          "type": "container",
          "width": Object {
            "type": "match_parent",
            "weight": 1,
          },
        },
        "state_id": 0,
      },
    ],
  },
  "templates": Object {},
}
`;

exports[`Facts scenario matches snapshot with utterance 1`] = `
Object {
  "card": Object {
    "log_id": "fact_card",
    "states": Array [
      Object {
        "div": Object {
          "height": Object {
            "type": "match_parent",
            "weight": 1,
          },
          "items": Array [
            Object {
              "background": Array [
                Object {
                  "color": "#121316",
                  "type": "solid",
                },
              ],
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [
                Object {
                  "delimiter_style": Object {
                    "color": "#0fff",
                  },
                  "height": Object {
                    "type": "match_parent",
                    "weight": 1,
                  },
                  "type": "separator",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
                Object {
                  "items": Array [
                    Object {
                      "font_size": 40,
                      "font_weight": "medium",
                      "height": Object {
                        "type": "wrap_content",
                      },
                      "line_height": 56,
                      "text": "Сколько лет Путину?",
                      "text_color": "#80ffffff",
                      "type": "text",
                      "width": Object {
                        "type": "wrap_content",
                      },
                    },
                    Object {
                      "content_alignment_vertical": "bottom",
                      "items": Array [
                        Object {
                          "font_size": 32,
                          "font_weight": "medium",
                          "height": Object {
                            "type": "wrap_content",
                          },
                          "line_height": 40,
                          "margins": Object {
                            "right": 16,
                          },
                          "text": "Возраст",
                          "text_color": "#fff",
                          "type": "text",
                          "width": Object {
                            "type": "wrap_content",
                          },
                        },
                        Object {
                          "font_size": 32,
                          "font_weight": "medium",
                          "height": Object {
                            "type": "wrap_content",
                          },
                          "line_height": 40,
                          "text": "wikipedia.org",
                          "text_color": "#80ffffff",
                          "type": "text",
                          "width": Object {
                            "type": "wrap_content",
                          },
                        },
                      ],
                      "margins": Object {
                        "top": 16,
                      },
                      "orientation": "horizontal",
                      "type": "container",
                    },
                  ],
                  "margins": Object {
                    "bottom": 20,
                  },
                  "paddings": Object {
                    "left": 48,
                    "right": 48,
                  },
                  "type": "container",
                },
                Object {
                  "delimiter_style": Object {
                    "color": "#0fff",
                  },
                  "height": Object {
                    "type": "match_parent",
                    "weight": 1,
                  },
                  "type": "separator",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
                Object {
                  "item_spacing": 24,
                  "items": Array [],
                  "paddings": Object {
                    "left": 48,
                    "right": 48,
                  },
                  "type": "gallery",
                },
              ],
              "paddings": Object {
                "bottom": 48,
                "top": 142,
              },
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
            Object {
              "alignment_horizontal": "right",
              "alignment_vertical": "top",
              "items": Array [
                Object {
                  "actions": Array [
                    Object {
                      "log_id": "close_fullscreen",
                      "url": "centaur://local_command?local_commands=[%7B%22command%22%3A%22close_layer%22%2C%22layer%22%3A%22DIALOG%22%2C%22stop_conversation%22%3Atrue%7D]",
                    },
                  ],
                  "alignment_horizontal": "right",
                  "background": Array [
                    Object {
                      "color": "#1affffff",
                      "type": "solid",
                    },
                  ],
                  "border": Object {
                    "corner_radius": 20,
                  },
                  "height": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                  "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/close_wt_border.png",
                  "margins": Object {
                    "right": 36,
                    "top": 36,
                  },
                  "paddings": Object {
                    "bottom": 22,
                    "left": 22,
                    "right": 22,
                    "top": 22,
                  },
                  "preload_required": 1,
                  "scale": "fill",
                  "type": "image",
                  "width": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                },
              ],
              "type": "container",
            },
          ],
          "orientation": "overlap",
          "type": "container",
          "width": Object {
            "type": "match_parent",
            "weight": 1,
          },
        },
        "state_id": 0,
      },
    ],
  },
  "templates": Object {},
}
`;
